--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "pragmarx/firewall",
+    "name": "dariusiii/firewall",
     "description": "A Laravel IP whitelisting and blacklisting",
     "keywords": [
         "firewall",
@@ -22,7 +22,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "~7|~8",
-        "orchestra/testbench": "3.4.*|3.5.*|3.6.*|3.7.*|3.8.*",
+        "orchestra/testbench": "3.4.*|3.5.*|3.6.*|3.7.*|3.8.*|4.0.x",
         "geoip2/geoip2": "~2.0",
         "guzzlehttp/guzzle": "^6.2"
     },
