--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     "require": {
         "php": ">=5.6",
         "laravel/framework": ">=5.3",
-        "pragmarx/support": "~0.8.0"
+        "pragmarx/support": "^0.9"
     },
     "require-dev": {
         "phpunit/phpunit": "~7|~8",
